# serializer version: 1
# name: test_select_ok[select_as_struct]
  '''
  query_expr
    select
      select_shape	STRUCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  query_expr
    select
      select_shape	VALUE
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_distinct]
  '''
  query_expr
    select
      select_mode	DISTINCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_dot_star_except]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	struct_column
          select_except
            select_except_list
              select_except_list
                select_except_item
                  ident	column1
              select_except_item
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_dot_star_replace]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	struct_column
          select_replace
            select_replace_list
              select_replace_list
                select_replace_item
                  integer_literal	1
                  ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          time_travel
            string_literal	'1970-01-01'
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_star]
  '''
  query_expr
    select
      select_list
        select_star
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_except]
  '''
  query_expr
    select
      select_list
        select_star
          select_except
            select_except_list
              select_except_list
                select_except_item
                  ident	column1
              select_except_item
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_replace]
  '''
  query_expr
    select
      select_list
        select_star
          select_replace
            select_replace_list
              select_replace_list
                select_replace_item
                  integer_literal	1
                  ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  query_expr
    select
      select_list
        select_dot_star
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  query_expr
    select
      select_list
        select_dot_star
          path_expression
            ident	column1
            ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_select_ok[select_subqueries]
  '''
  query_expr
    select
      select_list
        select_star
        select_expr
          ident	column1
        select_expr
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	column2
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column7
                from_clause
                  from_item_table
                    path_expression
                      ident	table2
          as_alias
            ident	alias2
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
          as_alias
            ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              subquery
                query_expr
                  select
                    select_list
                      select_expr
                        subquery
                          query_expr
                            select
                              select_list
                                select_expr
                                  integer_literal	1
  
  '''
# ---
# name: test_unnest_ok[unnest]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
  
  '''
# ---
# name: test_unnest_ok[unnest_alias_with_offset_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          from_unnest_offset_expr
            as_alias
              ident	alias2
  
  '''
# ---
# name: test_unnest_ok[unnest_with_offset]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          from_unnest_offset_expr
  
  '''
# ---
# name: test_unnest_ok[unnest_with_offset_alias]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          from_unnest_offset_expr
            as_alias
              ident	alias1
  
  '''
# ---
